archive and search items spacing fixed

--- a/sass/base/typography/_headings.scss
+++ b/sass/base/typography/_headings.scss
@@ -5,6 +5,4 @@ h4,
 h5,
 h6 {
 	clear: both;
-	margin: 0;
-	margin-bottom: 10px;
 }
