--- a/sass/base/typography/_typography.scss
+++ b/sass/base/typography/_typography.scss
@@ -1,3 +1,8 @@
+html {
+    font-size: 62.5%;
+	line-height: $font__line-height-body;
+}
+
 body,
 button,
 input,
@@ -6,8 +11,8 @@ optgroup,
 textarea {
 	color: $color__text-main;
 	font-family: $font__main;
-	font-size: 1rem;
-	line-height: $font__line-height-body;
+	font-size: 1.6rem;
+	
 }
 
 @import "headings";
